--- a/doc/USER_MANUAL/chap_source.tex
+++ b/doc/USER_MANUAL/chap_source.tex
@@ -54,9 +54,12 @@ Throug the main input .json file, we need to tell the simulation code where is t
 which is specified by \verb|in_source_file|.
 There are total three paramters in the .json file related to the source input:
 \begin{itemize}
-  \item \verb|in_source_file|: set the input source file;
-  \item \verb|is_export_source|: determine if export the internal discreted source for QC (not implemented yet);
-  \item \verb|source_export_dir|: the path for source exporting.
+  \item \verb|in_source_file|: \\
+     set the input source file;
+  \item \verb|is_export_source|: \\
+     determine if export the internal discreted source for QC (not implemented yet);
+  \item \verb|source_export_dir|: \\
+     the path for source exporting.
 \end{itemize}
 Currently, only \verb|in_source_file| is implemented and the other two have no effect yet.
 
