--- a/doc/USER_MANUAL/chap_source.tex
+++ b/doc/USER_MANUAL/chap_source.tex
@@ -269,7 +269,7 @@ What we should set in the .src file are:
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\textwidth]{Voigt_notation_Mnemonic_rule.svg.png}
+    \includegraphics[width=0.5\textwidth]{Voigt_notation_Mnemonic_rule_svg.png}
     \caption{Viogt notation (From: \href{https://en.wikipedia.org/wiki/Voigt_notation}{Wiki})}
     \label{fig_voigt}
 \end{figure}
