--- a/doc/USER_MANUAL/citation_media.bib
+++ b/doc/USER_MANUAL/citation_media.bib
@@ -1,48 +1,3 @@
-%======= solver
-@article{zhang2006traction,
-  title={Traction image method for irregular free surface boundaries in finite difference seismic wave simulation},
-  author={Zhang, Wei and Chen, Xiaofei},
-  journal={Geophysical Journal International},
-  volume={167},
-  number={1},
-  pages={337--353},
-  year={2006},
-  publisher={Blackwell Publishing Ltd Oxford, UK}
-}
-@article{zhang2012_3d_anisotropic,
-  title={Three-dimensional anisotropic seismic wave modelling in spherical coordinates by a collocated-grid finite-difference method},
-  author={Zhang, Wei and Shen, Yang and Zhao, Li},
-  journal={Geophysical Journal International},
-  volume={188},
-  number={3},
-  pages={1359--1381},
-  year={2012},
-  publisher={Blackwell Publishing Ltd Oxford, UK}
-}
-@article{Zhang2012three,
-  title = {Three-dimensional elastic wave numerical modelling in the presence of surface topography by a collocated-grid  finite-difference method on curvilinear grids},
-  author = {Zhang, Wei and Zhang, Zhenguo and Chen, Xiaofei},
-  journal = {Geophysical Journal International},
-  volume = {190},
-  number = {1},
-  pages = {358-378},
-  keywords = {Computational seismology, Numerical solutions, Wave propagation},
-  doi = {https://doi.org/10.1111/j.1365-246X.2012.05472.x},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-246X.2012.05472.x},
-  year = {2012}
-}
-
-%======= PML
-@article{zhang2010unsplit,
-  title={Unsplit complex frequency-shifted {PML} implementation using auxiliary differential equations for seismic wave modeling},
-  author={Zhang, Wei and Shen, Yang},
-  journal={Geophysics},
-  volume={75},
-  number={4},
-  pages={T141--T154},
-  year={2010},
-  publisher={Society of Exploration Geophysicists}
-}
 
 %==== media
 @article{dziewonski1981preliminary,
@@ -53,7 +8,8 @@
   number={4},
   pages={297--356},
   year={1981},
-  publisher={Elsevier}
+  publisher={Elsevier}, 
+  doi = {10.1016/0031-9201(81)90046-7}
 }
 
 @article{thomsen1986weak,
@@ -64,7 +20,8 @@
   number={10},
   pages={1954--1966},
   year={1986},
-  publisher={Society of Exploration Geophysicists}
+  publisher={Society of Exploration Geophysicists},
+  doi = {10.1190/1.1442051}
 }
 
 @article{moczo_3d_2002,
@@ -98,6 +55,7 @@
   year = {2017},
   pages = {1250--1264}
 }
+
 @article{chaljub2015,
   title={3-{D} numerical simulations of earthquake ground motion in sedimentary basins: testing accuracy through stringent models},
   author={Chaljub, Emmanuel and Maufroy, Emeline and Moczo, Peter and Kristek, Jozef and Hollender, Fabrice and Bard, Pierre-Yves and Priolo, Enrico and Klin, Peter and De Martin, Florent and Zhang, Zhenguo and others},
@@ -106,7 +64,8 @@
   number={1},
   pages={90--111},
   year={2015},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press}, 
+  doi = {10.1093/gji/ggu472}
 }
 
 @article{jiang2021tti,
@@ -117,5 +76,7 @@
   number={3},
   pages={2016--2043},
   year={2021},
+  issn = {0956-540X},
+  doi = {10.1093/gji/ggab310},
   publisher={Oxford University Press}
 }
