--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -119,8 +119,7 @@
 
 \usepackage{fancyhdr}
 
-
-\graphicspath{{./figure}}
+\graphicspath{{figure/}}
 
 \setlength{\parskip}{0.4em}
 % create thumbnails
@@ -186,7 +185,7 @@
 %% REFERENCES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %in every chapter
-\bibliography{citation}
+%\bibliography{citation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% APPENDIX
