Design structure of user manual by comments.

--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -172,12 +172,50 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\include{01_introduction}
+%- structure of the manual
+
+%- introduction
+%--  describe the purpose of the code, major features
+%\include{chap_intro}
+
+%- compilation
+%-- the structure of the code
+%-- how to compile
+%\include{chap_compile}
+
+%- run the program
+%-- main configuration file, ref to later chapters for details
+%\include{chap_run}
+
+%- How to generate grid
 \include{chap_grid}
 
+%- How to input structure model
 \include{chap_media}
 
+%- How to input source
+%-- need to add descriptions of various STF funcs
 \include{chap_source}
+
+%- Absoring techniques, ADE CFS-PML, exp etc.
+%\include{chap_abs}
+
+%- Output
+%\include{chap_output}
+
+%- Postproc, how to show the results 
+%\include{chap_postproc}
+
+%- Examples
+%\include{chap_examples}
+
+%- appendix A
+%-- governing equations used in the code
+%\include{appd_equations}
+
+%- appendix B
+%--- schemes used in the code
+%\include{appd_schemes}
 
 \include{copyright}
 
