--- a/doc/USER_MANUAL/citation.bib
+++ b/doc/USER_MANUAL/citation.bib
@@ -119,3 +119,44 @@
   year={2021},
   publisher={Oxford University Press}
 }
+
+@inproceedings{hixon1997increasing,
+	title={On increasing the accuracy of MacCormack schemes for aeroacoustic applications},
+	author={Hixon, Ray and Hixon, R},
+	booktitle={3rd AIAA/CEAS Aeroacoustics Conference},
+	pages={1586},
+	year={1997}
+}
+
+@article{tam1993dispersion,
+	title={Dispersion-relation-preserving finite difference schemes for computational acoustics},
+	author={Tam, Christopher KW and Webb, Jay C},
+	journal={Journal of computational physics},
+	volume={107},
+	number={2},
+	pages={262--281},
+	year={1993},
+	publisher={Elsevier}
+}
+
+@article{hu1996low,
+	title={Low-dissipation and low-dispersion Runge--Kutta schemes for computational acoustics},
+	author={Hu, FQ and Hussaini, M Yousuff and Manthey, JL},
+	journal={Journal of computational physics},
+	volume={124},
+	number={1},
+	pages={177--191},
+	year={1996},
+	publisher={Elsevier}
+}
+
+@article{graves1996simulating,
+	title={Simulating seismic wave propagation in 3D elastic media using staggered-grid finite differences},
+	author={Graves, Robert W},
+	journal={Bulletin of the seismological society of America},
+	volume={86},
+	number={4},
+	pages={1091--1106},
+	year={1996},
+	publisher={The Seismological Society of America}
+}
